--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     overflow: hidden;
   }
-  
+
   #video-background {
     position: fixed;
     top: 0;
@@ -13,60 +13,64 @@ body {
     z-index: -1;
     object-fit: cover;
   }
-  
+
   /* Center the content within the page */
   #content {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: "Custom";
     text-align: center;
+    display: inline;
+    flex-direction: row;
+    align-items: center;
     color: white;
     font-size: 70px;
   }
-  
+
   .hello {
     position: fixed;
     height: auto;
-    left: 20px;
-    width: 150px;
+    left: 0px;
+    width: 200px;
   }
-  
-  #hi {
+
+  #hi{
     position: absolute;
-    bottom: 20px;
+    top: 95%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -45%);
     color: azure;
     text-align: center;
+    display: inline;
+    flex-direction: row;
+    align-items: center;
     font-size: 15px;
     font-family: "Custom";
   }
-  
+
   /* Media Queries for Mobile Devices */
   @media only screen and (max-width: 600px) {
     #content {
       font-size: 40px;
     }
-  
+
     .hello {
-      width: 100px;
+      width: 150px;
     }
-  
     #hi {
-      bottom: 10px;
-      width: 250px;
+      top: 90%;
+      width: 350px;
       font-size: 13px;
     }
-  
     #video-background {
-      object-fit: contain;
+      object-fit: cover;
     }
   }
-  
+
+
   @font-face {
     font-family: "Custom";
     src: url(TomaSans-Regular.otf) format("opentype");
   }
-  
